--- a/table.html
+++ b/table.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+		table {
+			width: 100%;
+			border-collapse: collapse;
+		}
+
+	</style>
 </head>
 <body>
-<table border=”1” style="width:100%;border-collapse: collapse">
+<table border=”1” >
 	<tr>
 		<th colspan="4" style="text-align: center;">Table</th>
 	</tr>
